[package]
name = "rightfm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rightfm"

[dependencies]
assert_ok = "1.0.2"
nalgebra = { version = "0.33.2", features = ["rand"] }
nalgebra-sparse = "0.10.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-slice = "0.3.0"
nshare = "0.9.0"
polars = "0.38.3"
rand = "0.8.5"
rand_isaac = "0.3.0"
#rayon = { version = "1.10.0",optional = true }
rayon = { version = "1.10.0" }
reqwest = { version = "0.12.3", features = ["blocking"] }
shellexpand = "3.1.0"
shuffle = "0.1.7"
tqdm = "0.7.0"
zip = "0.6.6"
